--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.40",
         "tailwindcss": "^3.4.7",
         "vite": "^5.0"
     },
     "dependencies": {
+        "alpinejs": "^3.14.1",
         "flowbite": "^2.5.1"
     }
 }
