--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,18 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "daily"
-    labels:
-      - "dependencies"
-
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     labels:
       - "npm"
       - "dependencies"
@@ -24,10 +17,8 @@ updates:
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
     directory: "/"
-    registries:
-      - spark
     schedule:
-      interval: "daily"
+      interval: "weekly"
     labels:
       - "php"
       - "dependencies"
