--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,22 +3,22 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
-version: 2
-updates:
-  # Maintain dependencies for npm
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    labels:
-      - "npm"
-      - "dependencies"
+# version: 2
+# updates:
+#   # Maintain dependencies for npm
+#   - package-ecosystem: "npm"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#     labels:
+#       - "npm"
+#       - "dependencies"
 
-  # Maintain dependencies for Composer
-  - package-ecosystem: "composer"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    labels:
-      - "php"
-      - "dependencies"
+#   # Maintain dependencies for Composer
+#   - package-ecosystem: "composer"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#     labels:
+#       - "php"
+#       - "dependencies"
