--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "enlightn/enlightn": "^2.10",
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
