--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
