--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,16 @@ APP_DEBUG=true # Lebih baik dihapus pada saat hosting
 APP_TIMEZONE=Asia/Makassar
 APP_URL=http://localhost # Jangan lupa diganti
 
-BCRYPT_ROUNDS=20
+HASH_DRIVER=argon2id
+ARGON_MEMORY=65536
+ARGON_THREADS=4
+ARGON_TIME=3
+
+ENLIGHTN_USERNAME=
+ENLIGHTN_API_TOKEN=
 
 DB_CONNECTION=mysql
+DB_ENGINE=InnoDB
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=sipersediaanbarang # Jangan lupa diganti
