Add Referrer-Policy header and update form classes for improved security and styling

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -32,4 +32,5 @@
 
 <IfModule mod_headers.c>
     Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
