Enhance security configurations and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,6 @@ DB_USERNAME=root # Jangan lupa diganti
 DB_PASSWORD= # Jangan lupa diganti
 
 SESSION_DOMAIN=null
+SESSION_LIFETIME=60
 
 VITE_APP_NAME="${APP_NAME}"
