--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,12 @@
+
+# DO NOT REMOVE THIS LINE AND THE LINES BELOW HOTLINKID:627Eb6wwPN
+RewriteEngine on
+RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?aplikasipersediaantokox.com/.*$      [NC]
+RewriteRule .*\.(gif|tiff|mpg|zip|mp3|psd|htm|avi|wma|rar|txt|swf|exe|mpeg|mov)$ https://aplikasipersediaantokox.com [R,NC]
+# DO NOT REMOVE THIS LINE AND THE LINES ABOVE 627Eb6wwPN:HOTLINKID
+
+
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
