--- a/.htaccess
+++ b/.htaccess
@@ -1,22 +1,8 @@
-RewriteEngine On
 Options +SymLinksIfOwnerMatch
+RewriteEngine On
 
-# Blokir akses ke file sensitif
+# Allow Installatron requests
+RewriteCond %{REQUEST_FILENAME} deleteme\.\w+\.php
+RewriteRule (.*) - [L]
 
-<FilesMatch "^(\.env|artisan|composer\.(json|lock))$">
-Order allow,deny
-Deny from all
-</FilesMatch>
-
-# Blokir akses ke folder inti Laravel
-
-RewriteRule ^(app|bootstrap|config|database|resources|routes|storage|tests|vendor)/(.\*)$ - [F,L]
-
-# Serve existing files in the /public folder as if they were in /
-
-RewriteCond %{DOCUMENT_ROOT}/laravel-app/public%{REQUEST_URI} -f
-RewriteRule (.+) /laravel-app/public/$1 [L]
-
-# Route everything else to /public/index.php
-
-RewriteRule ^ /laravel-app/public/index.php [L]
+RewriteRule ^ index.php [L]
