--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           private-ssh-key: ${{ secrets.SSH_KEY }}
           destination-path: ${{ secrets.SSH_PATH }}
 
-      - name: Run Composer and Laravel commands on server via SSH
+      - name: Run Composer and Laravel commands on server via-SSH
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_SERVER }}
