--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - master
-name: 🚀 Deploy website on push (Master)
+name: 🚀 Deploy website (Server) on push (Master)
 jobs:
   web-deploy:
     name: 🎉 Deploy
