--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
 APP_NAME=AplikasiPersediaanTokoX
-APP_ENV=local #Default Production, delete jika di hosting
 # Regenerate Key
 APP_KEY=
-APP_DEBUG=true # Lebih baik dihapus pada saat hosting
 APP_TIMEZONE=Asia/Makassar
 APP_URL=http://localhost # Jangan lupa diganti
 
@@ -14,8 +12,9 @@ ARGON_TIME=3
 ENLIGHTN_USERNAME=
 ENLIGHTN_API_TOKEN=
 
+LOG_LEVEL=warning
+
 DB_CONNECTION=mysql
-DB_ENGINE=InnoDB
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=sipersediaanbarang # Jangan lupa diganti
