--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,10 @@ jobs:
         run: |
           npm install
           npm update
-          npm audit fix
+          npm audit
+          npm audit fix --force
           npm run build
-          
+
       - name: 📂 Sync Files
         uses: SamKirkland/web-deploy@v1
         with:
@@ -51,7 +52,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.SSH_PATH }}
-            composer2 install --prefer-dist --no-progress --no-suggest --no-interaction --optimize-autoloader --no-dev
+            composer2 install --no-progress --no-suggest --no-interaction --optimize-autoloader --no-dev
             composer2 dump-autoload
             composer2 update --prefer-stable --optimize-autoloader --no-dev --no-suggest
             php artisan migrate --force --no-interaction
