--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,3 +64,4 @@ jobs:
             php artisan event:cache
             php artisan route:cache
             php artisan view:cache
+            php artisan enlightn --report
