Add Enlightn workflow and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ ARGON_TIME=3
 
 ENLIGHTN_USERNAME=
 ENLIGHTN_API_TOKEN=
+ENLIGHTN_GITHUB_REPO=Tayoo71/OWASPTop10-SistemInformasiPersediaanBarang
 
 LOG_LEVEL=warning
 
