--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           composer install --no-progress --no-suggest
+          composer update --prefer-stable --no-suggest
 
       - name: Psalm Security Scan
         uses: psalm/psalm-github-security-scan@f3e6fd9432bc3e44aec078572677ce9d2ef9c287
