--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -15,16 +15,28 @@ jobs:
   php-security:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Psalm Security Scan
-        uses: psalm/psalm-github-security-scan@f3e6fd9432bc3e44aec078572677ce9d2ef9c287
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          extensions: mbstring, pdo, pdo_mysql, gd, bcmath # Installs required extensions
+          ini-values: memory_limit=-1
+
+      - name: Install project dependencies
+        run: |
+          composer install --no-scripts --no-progress
+
+      - name: Run Psalm Security Scan
+        run: |
+          composer require --dev vimeo/psalm
+          ./vendor/bin/psalm --report=results.sarif
 
       - name: Upload Security Analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
