--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,12 +1,3 @@
-
-# DO NOT REMOVE THIS LINE AND THE LINES BELOW HOTLINKID:627Eb6wwPN
-RewriteEngine on
-RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?aplikasipersediaantokox.com/.*$      [NC]
-RewriteRule .*\.(gif|tiff|mpg|zip|mp3|psd|htm|avi|wma|rar|txt|swf|exe|mpeg|mov)$ https://aplikasipersediaantokox.com [R,NC]
-# DO NOT REMOVE THIS LINE AND THE LINES ABOVE 627Eb6wwPN:HOTLINKID
-
-
-
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
@@ -40,7 +31,7 @@ RewriteRule .*\.(gif|tiff|mpg|zip|mp3|psd|htm|avi|wma|rar|txt|swf|exe|mpeg|mov)$
 </IfModule>
 
 <IfModule mod_headers.c>
-    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set X-Frame-Options "SAMEORIGIN"
     Header always set X-Content-Type-Options "nosniff"
