--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,5 @@ jobs:
             php artisan event:cache
             php artisan route:cache
             php artisan view:cache
+            composer2 validate
             php artisan enlightn --report
