--- a/public/.htaccess
+++ b/public/.htaccess
@@ -31,8 +31,19 @@
 </IfModule>
 
 <IfModule mod_headers.c>
+    Header edit Set-Cookie ^(.*)$ "$1; HttpOnly; Secure; SameSite=Strict"
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set X-Frame-Options "SAMEORIGIN"
     Header always set X-Content-Type-Options "nosniff"
 </IfModule>
+
+<FilesMatch "robots\.txt$">
+    <IfModule mod_headers.c>
+        Header set Cache-Control "public, max-age=604800, immutable"
+    </IfModule>
+</FilesMatch>
+
+<FilesMatch "\.(woff|woff2|ttf|eot|otf|svg)$">
+    Header set Cache-Control "public, max-age=31536000, immutable"
+</FilesMatch>
