--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "barryvdh/laravel-dompdf": "^3.0",
-        "enlightn/enlightn": "^2.10",
-        "jenssegers/agent": "^2.6",
-        "laravel/fortify": "^1.24",
-        "laravel/framework": "^11.9",
-        "maatwebsite/excel": "^3.1",
-        "spatie/laravel-activitylog": "^4.9",
-        "spatie/laravel-permission": "^6.9"
+        "php": "^8.3",
+        "barryvdh/laravel-dompdf": "*",
+        "enlightn/enlightn": "*",
+        "jenssegers/agent": "*",
+        "laravel/fortify": "*",
+        "laravel/framework": "^11.0",
+        "maatwebsite/excel": "*",
+        "spatie/laravel-activitylog": "*",
+        "spatie/laravel-permission": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
