--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.9",
         "autoprefixer": "^10.4.20",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "latest",
         "postcss": "^8.4.40",
         "tailwindcss": "^3.4.7",
-        "vite": "^5.4"
+        "vite": "latest"
     },
     "dependencies": {
         "alpinejs": "^3.14.1",
         "axios": "^1.7.7",
         "flowbite": "^2.5.1"
+    },
+    "overrides": {
+        "esbuild": "latest"
     }
 }
