--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set Up PHP & Composer
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.3'
           tools: composer:v2
 
       - name: Set Up Node.js
@@ -26,10 +26,15 @@ jobs:
         run: composer audit || true
 
       - name: Check NPM Security Vulnerabilities
-        run: npm audit --audit-level=high || true
+        run: |
+          npm install
+          npm update
+          npm audit --audit-level=high || true
 
       - name: Install PHP Dependencies
-        run: composer update --no-interaction --prefer-dist --optimize-autoloader --prefer-stable --no-dev --no-suggest
+        run: |
+          composer install --no-progress --no-suggest --no-interaction --optimize-autoloader --no-dev
+          composer update --no-interaction --prefer-dist --optimize-autoloader --prefer-stable --no-dev --no-suggest
 
       - name: Install Node.js Dependencies
         run: npm update
