--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -3,9 +3,6 @@ name: Manual Dependency Update
 on:
   workflow_dispatch:
 
-env:
-  BRANCH_NAME: update-dependencies-$(date +%Y%m%d%H%M%S)
-
 jobs:
   update-dependencies:
     runs-on: ubuntu-latest
@@ -44,6 +41,8 @@ jobs:
 
       - name: Create Branch for Updates
         run: |
+          BRANCH_NAME=update-dependencies-$(date +%Y%m%d%H%M%S)
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b $BRANCH_NAME
