--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,3 +47,20 @@
 <FilesMatch "\.(woff|woff2|ttf|eot|otf|svg)$">
     Header set Cache-Control "public, max-age=31536000, immutable"
 </FilesMatch>
+
+<IfModule mod_headers.c>
+    Header set Age "216000"
+    Header set X-Frame-Options SAMEORIGIN
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Content-Type-Options "nosniff"
+    Header set X-Permitted-Cross-Domain-Policies "none"
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" env=HTTPS
+    Header set Referrer-Policy "no-referrer-when-downgrade"
+    Header set Permissions-Policy "accelerometer=(), autoplay=(self), camera=(), encrypted-media=(self), fullscreen=(self), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), midi=(), payment=(self), picture-in-picture=(self), publickey-credentials-get=(), sync-xhr=(self), usb=()"
+    Header set Expect-CT: enforce, max-age=31536000
+    Header always unset X-Powered-By
+    Header always unset server
+    Header unset X-Powered-By
+    Header unset server
+    Header append Vary "Accept-Encoding, User-Agent, Referer"
+</IfModule>
